# ml-for-fun

./: README.md  pyproject.toml
common/: pyproject.toml
data/: .gitignore  README.md  names_dataset.py  names_dataset_test.py  (+1 more)
learning/: pyproject.toml
learning/src/learning/: learner.py  metrics.py  metrics_test.py
learning/src/learning/gpt2/: data_sources_test.py  download_model.py  ioi_circuit.ipynb  ioi_circuit_analyzer.py  ioi_circuit_analyzer_test.py  metrics.py  model.py  model_test.py  plot.py  popular_names_data_source.py  popular_names_data_source_test.py  prompts.py
learning/src/learning/ioi_circuit/: data_sources.py  data_sources_test.py  ioi_circuit.ipynb  ioi_circuit.md  ioi_circuit_analyzer.py  ioi_circuit_analyzer_test.py  metrics.py  model.py  model_test.py  plot.py  prompts.py
learning/src/learning/names_classifier/: model.py  names_classifier.ipynb  names_classifier_dataset.py  names_classifier_dataset_test.py  names_classifier_learner.py  names_classifier_log.md  names_dataset.py  names_dataset_test.py  names_learner.py
learning/src/learning/names_generator/: model.py  names_generator.ipynb  names_generator_dataset.py  names_generator_dataset_test.py
learning/src/learning/shakespeare_generator/: model.py  shakespeare_dataset.py  shakespeare_dataset_test.py  shakespeare_generator.ipynb  shakespeare_generator_log.md
notebooks/: README.md  gpt2.ipynb  ioi_circuit.ipynb  ioi_circuit.md  names_classifier.ipynb  names_classifier_log.md  names_generator.ipynb  pyproject.toml  shakespeare_generator.ipynb  shakespeare_generator_log.md
(+18 files in other folders)
