[project]
name = "learning"
version = "0.1.0"
description = "Add your description here"
classifiers = ["Private :: Do Not Upload"]
requires-python = ">=3.13"
dependencies = [
    "nbformat>=5.10.4",
    "plotly>=6.1.2",
    "tiktoken>=0.9.0",
    "torch>=2.7.0",
    "torchinfo>=1.8.0",
    "transformers>=4.52.4",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
